--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-torch~=2.2.1
-torchvision~=0.17.1
+torch>=2.2.1
+tensorboard
+torchvision>=0.17.1
+numpy>=1.26.4
+timm>=0.9.10
+torchmetrics>=1.4.2
+tqdm>=4.66.2
